--- a/requirements.txt
+++ b/requirements.txt
@@ -1,160 +1,46 @@
-absl-py==0.8.1
-anyio==3.5.0
-appnope==0.1.2
-argon2-cffi==20.1.0
-asgiref==3.5.1
-astor==0.8.0
-async-generator==1.10
-attrs==20.3.0
+alembic==1.8.0
+anyio==3.6.1
+asgiref==3.5.2
 autopep8==1.6.0
-backcall==0.2.0
-bleach==3.2.1
-cachetools==3.1.1
-certifi==2019.9.11
-cffi==1.14.4
-chardet==3.0.4
-charset-normalizer==2.0.7
+certifi==2022.5.18.1
+cffi==1.15.0
+charset-normalizer==2.0.12
 click==8.1.3
-cloudpickle==1.6.0
-colorama==0.4.4
-config==0.5.0.post0
-configparser==5.0.1
-crayons==0.4.0
-cryptography==37.0.4
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
+cryptography==37.0.2
 dnspython==2.2.1
-ecdsa==0.18.0
+ecdsa==0.17.0
 email-validator==1.2.1
-entrypoints==0.3
-fastapi==0.76.0
-freetype-py==2.2.0
-future==0.18.2
-gast==0.2.2
-google-auth==1.7.0
-google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
+fastapi==0.78.0
 greenlet==1.1.2
-grpcio==1.25.0
-gym==0.17.3
 h11==0.13.0
-h5py==2.10.0
-httpie==2.6.0
 httptools==0.4.0
-idna==2.8
-importlib-metadata==3.1.0
-ipykernel==5.3.4
-ipython==7.19.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
+idna==3.3
 itsdangerous==2.1.2
-jedi==0.17.2
-Jinja2==2.11.2
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.7
-jupyter-console==6.2.0
-jupyter-core==4.7.0
-jupyterlab-pygments==0.1.2
-Keras==2.2.4
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
-Markdown==3.1.1
-MarkupSafe==1.1.1
-matplotlib==3.1.1
-mistune==0.8.4
-mock==4.0.2
-mpmath==1.1.0
-mysql-connector-python==8.0.29
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.3
-notebook==6.1.5
-numpy==1.17.3
-nupy==0.1.1
-oauthlib==3.1.0
-opt-einsum==3.1.0
-orjson==3.6.8
-packaging==20.7
-pandas==0.25.2
-pandocfilters==1.4.3
-parso==0.7.1
+Jinja2==3.1.2
+Mako==1.2.0
+MarkupSafe==2.1.1
+orjson==3.7.2
 passlib==1.7.4
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==6.2.1
-post==2019.4.13
-prometheus-client==0.9.0
-prompt-toolkit==3.0.8
-protobuf==3.10.0
-psycopg2-binary==2.9.3
-ptyprocess==0.6.0
-public==2019.4.13
-pyasn1==0.4.7
-pyasn1-modules==0.2.7
-pyclustering==0.9.2
+psycopg2==2.9.3
+pyasn1==0.4.8
 pycodestyle==2.8.0
-pycparser==2.20
-pydantic==1.9.0
-pydentic==0.0.1.dev3
-pyglet==1.5.0
-Pygments==2.7.2
-PyJWT==2.4.0
-PyMySQL==1.0.2
-pyparsing==2.4.5
-pyreadstat==1.0.8
-pyrsistent==0.17.3
-PySocks==1.7.1
-python-dateutil==2.8.0
+pycparser==2.21
+pydantic==1.9.1
 python-dotenv==0.20.0
-python-engineio==3.12.1
 python-jose==3.3.0
 python-multipart==0.0.5
-python-socketio==4.5.1
-python-stdnum==1.17
-pytz==2019.3
-PyYAML==5.3.1
-pyzmq==20.0.0
-qtconsole==5.0.1
-QtPy==1.9.0
-query-string==2019.4.13
-request==2019.4.13
-requests==2.27.1
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-rsa==4.0
-scipy==1.3.2
-Send2Trash==1.5.0
-six==1.12.0
+PyYAML==6.0
+requests==2.28.0
+rsa==4.8
+six==1.16.0
 sniffio==1.2.0
-socketIO-client==0.7.2
-SQLAlchemy==1.4.36
-starlette==0.18.0
-sympy==1.7
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
+SQLAlchemy==1.4.37
+starlette==0.19.1
 toml==0.10.2
-tornado==6.1
-traitlets==5.0.5
 typing_extensions==4.2.0
-ujson==5.2.0
-urllib3==1.25.7
+ujson==5.3.0
+urllib3==1.26.9
 uvicorn==0.17.6
 uvloop==0.16.0
 watchgod==0.8.2
-wcwidth==0.2.5
-webdriver-manager==3.3.0
-webencodings==0.5.1
-websocket-client==0.57.0
 websockets==10.3
-Werkzeug==0.16.0
-widgetsnbextension==3.5.1
-wrapt==1.11.2
-zipp==3.4.0
